--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello, World!</h1>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <script src="js/index.js"></script>
+    </head>
+    <body>
+        <h1>Hello, World!</h1>
+        <button id="click_me_button" class="default_button">Click me!</button>
+    </body>
+</html>
