--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <script src="js/index.js"></script>
     </head>
     <body>
-        <h1>Hello, World!</h1>
-        <button id="click_me_button" class="default_button">Click me!</button>
+        <h1 class="title">Pogi ni Yujin!</h1>
     </body>
 </html>
