--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello, World!</h1>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <script src="js/index.js"></script>
+    </head>
+    <body>
+        <h1 class="title">Pogi ni Yujin!</h1>
+    </body>
+</html>
